// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MailTemplateProvider when non empty array .getTemplate returns template 1`] = `
Object {
  "bodyHtml": "bodyHtml_1",
  "bodyPlain": "bodyPlain_1",
  "groupId": "type_1_group_1",
  "id": "1",
  "isDefault": false,
  "type": "group_1",
  "typeId": "type_1",
  "typeName": "groupName_1",
}
`;

exports[`MailTemplateProvider when non empty array .getTemplateListByFilter filter by not exist type returns empty array 1`] = `Array []`;

exports[`MailTemplateProvider when non empty array .getTemplateListByFilter filter by not match text returns empty array 1`] = `Array []`;

exports[`MailTemplateProvider when non empty array .getTemplateListByFilter filter by type and text returns result 1`] = `
Array [
  Object {
    "caption": "groupName_1",
    "id": "type_1_group_1",
    "itemIds": Array [
      "1",
    ],
    "items": Array [
      Object {
        "bodyHtml": "bodyHtml_1",
        "bodyPlain": "bodyPlain_1",
        "groupId": "type_1_group_1",
        "id": "1",
        "isDefault": false,
        "type": "group_1",
        "typeId": "type_1",
        "typeName": "groupName_1",
      },
    ],
  },
]
`;

exports[`MailTemplateProvider when non empty array .getTemplateListByFilter filter by type returns result 1`] = `
Array [
  Object {
    "caption": "groupName_1",
    "id": "type_1_group_1",
    "itemIds": Array [
      "1",
    ],
    "items": Array [
      Object {
        "bodyHtml": "bodyHtml_1",
        "bodyPlain": "bodyPlain_1",
        "groupId": "type_1_group_1",
        "id": "1",
        "isDefault": false,
        "type": "group_1",
        "typeId": "type_1",
        "typeName": "groupName_1",
      },
    ],
  },
]
`;

exports[`MailTemplateProvider when non empty array .getTypes returns types 1`] = `
Array [
  Object {
    "caption": "caption_1",
    "id": "type_1",
    "itemIds": Array [
      "type_1_group_1",
    ],
  },
  Object {
    "caption": "caption_2",
    "id": "type_2",
    "itemIds": Array [
      "type_2_group_1",
    ],
  },
]
`;
